tests/bad_ref_self_in_initializer.c
//@FAIL
int main() {
    int x = x;
    return 0;
}